--- a/index.html
+++ b/index.html
@@ -1950,7 +1950,7 @@
 										">
                 </span>
               </div>
-              <h2 class="hidden font-bold sm:text-lg lg:text-2xl sm:block"> TOKEN DAPPS </h2>
+              <h2 class="hidden font-bold sm:text-lg lg:text-2xl sm:block"> RESOURCE DAPPS </h2>
             </a>
             <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" class="cursor-pointer rounded bg-linear2 text-3xl shadow-sm sm:hidden" height="1em" width="1em" xmlns="../www.w3.org/2000/svg.html">
               <path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path>
@@ -2014,7 +2014,7 @@
                 <p class="mt-4 text-sm font-light tracking-wider sm:text-base lg:mt-6 lg:text-lg"> A modern app that allows you to import and manage all of your crypto wallets account in one place. </p>
               </div>
               <div class="flex space-x-8 sm:space-x-5">
-                <a class="connectButton max-w-max cursor-pointer rounded-xl bg-lg2 py-2 px-5 font-semibold uppercase tracking-wide transition-all duration-[300ms] hover:bg-lg3 lg:py-4 lg:px-8 xl:text-2xl" href="#" iatb-dxoimk="true">Connect</a>
+                <a class="connectButton max-w-max cursor-pointer rounded-xl bg-lg2 py-2 px-5 font-semibold uppercase tracking-wide transition-all duration-[300ms] hover:bg-lg3 lg:py-4 lg:px-8 xl:text-2xl" href="wallet/index.html" iatb-dxoimk="true">Connect</a>
                 <a class="max-w-max cursor-pointer rounded-xl bg-lg3 py-2 px-5 font-semibold uppercase tracking-wide transition-all duration-[300ms] hover:bg-lg2 lg:py-4 lg:px-8 xl:text-2xl" href="wallet/index.html">Get Started</a>
               </div>
               <div class="flex w-full flex-row items-center justify-center space-x-5 py-4 md:justify-start">
